--- a/isi.html
+++ b/isi.html
@@ -40,7 +40,7 @@
 
     </section>
 
-    <nav class="navbar navbar-expand-md bg-body-transparent sticky-top mynavbar">
+    <!-- <nav class="navbar navbar-expand-md bg-body-transparent sticky-top mynavbar">
       <div class="container">
         <a class="navbar-brand" href="#">Arfian & Asriani</a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -61,7 +61,7 @@
           </div>
         </div>
       </div>
-    </nav>
+    </nav> -->
 
     <section id="home" class="home">
 
@@ -387,4 +387,5 @@
     </svg>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
+
 </html>
