--- a/isi.html
+++ b/isi.html
@@ -258,11 +258,11 @@
         var nomorWA = "6285216523767";
 
         var pesanWA =
-            "Assalamu’alaikum,%0A" +
-            "Nama: *" + nama + "*%0A" +
-            "Kehadiran: *" + kehadiran + "*%0A" +
+            "Assalamu’alaikum," +
+            "Nama: *" + nama + "" +
+            "Kehadiran: *" + kehadiran + "" +
             "Pesan:%0A" +
-            pesanUser + "%0A%0A" +
+            pesanUser + "" +
             "Terima kasih 🙏";
 
         var url = "https://wa.me/" + nomorWA + "?text=" + encodeURIComponent(pesanWA);
@@ -389,4 +389,5 @@
   </body>
 
 </html>
+
 
