--- a/isi.html
+++ b/isi.html
@@ -258,11 +258,11 @@
         var nomorWA = "6285216523767";
 
         var pesanWA =
-            "Assalamu’alaikum," +
-            "Nama: *" + nama + "" +
-            "Kehadiran: *" + kehadiran + "" +
-            "Pesan:%0A" +
-            pesanUser + "" +
+            "Assalamu’alaikum,`" +
+            "Nama: *" + nama + "`" +
+            "Kehadiran: *" + kehadiran + "`" +
+            "Pesan:`" +
+            pesanUser + "`" +
             "Terima kasih 🙏";
 
         var url = "https://wa.me/" + nomorWA + "?text=" + encodeURIComponent(pesanWA);
@@ -389,5 +389,6 @@
   </body>
 
 </html>
+
 
 
